--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,29 +5,42 @@ on:
     branches: # <1>
       - main
 jobs:
+  test:
+    name: Test Application
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go 1.x
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.22
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v2
+      - name: Downloads
+        run: go get -t ./...
+      - name: Run Test
+        run: go test ./...
   build:
     name: Build App
     runs-on: ubuntu-latest #
     steps:
+      - name: Set up Go 1.x #
+        uses: actions/setup-go@v2
+        with:
+          go-version: ^1.22
 
-    - name: Set up Go 1.x #
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.22
+      - name: Check out code into the Go module directory #
+        uses: actions/checkout@v2
 
-    - name: Check out code into the Go module directory #
-      uses: actions/checkout@v2
+      - name: Build
+        run: make build #
 
-    - name: Build
-      run: make build #
+      - name: Copy Files #
+        run: |
+          mkdir  artifacts
+          cp api artifacts/.
 
-    - name: Copy Files #
-      run: |
-           mkdir  artifacts
-           cp api artifacts/.
-
-    - name: Archive #
-      uses: actions/upload-artifact@v2
-      with:
+      - name: Archive #
+        uses: actions/upload-artifact@v2
+        with:
           name: api #
           path: artifacts
