--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -18,7 +18,20 @@ jobs:
       - name: Downloads
         run: go get -t ./...
       - name: Run Test
-        run: go test ./...
+        run: make test
+      - name: Coverage Check
+        run: make coverage
+      - name: Generate Report
+        run: make report
+      - name: Copy Files
+        run: |
+          mkdir  reports
+          cp cover.xhtml reports/.
+      - name: Archive
+        uses: actions/upload-artifact@v2
+        with:
+          name: reports
+          path: reports
   build:
     name: Build App
     runs-on: ubuntu-latest #
